# idea-generator

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
docs/: USAGE.md
idea_generator/: __init__.py  cleaning.py  cli.py  config.py  filters.py  github_client.py  models.py  output.py  setup.py
idea_generator/llm/: __init__.py  client.py
idea_generator/llm/modelfiles/: README.md  grouping.Modelfile  summarizer.Modelfile
idea_generator/llm/prompts/: grouper.txt  summarizer.txt
idea_generator/pipelines/: __init__.py  grouping.py  orchestrator.py  summarize.py
tests/: __init__.py  test_cleaning.py  test_cli.py  test_config.py  test_filters.py  test_github_client.py  test_grouping_pipeline.py  test_integration.py  test_llm_client.py  test_models.py  test_orchestrator.py  test_output.py  test_setup.py  test_summarize_pipeline.py
